--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,34 +1,29 @@
-name: amazonRDP
+<IfModule mod_rewrite.c>
+RewriteEngine On
+RewriteBase /
 
-on: workflow_dispatch
+# if browser supports SNI set SERVER variable
+SetEnv SSL_TLS_SNI %{SSL:SSL_TLS_SNI}
 
-jobs:
-  build:
+# if it's browser that supports SNI then redirect to https
+RewriteCond %{HTTPS} off
+RewriteCond %{HTTP_USER_AGENT} !MSIE\s[1-8]\. [NC]
+RewriteCond %{HTTP_USER_AGENT} !Windows\sNT\s5\. [NC]
+RewriteCond %{HTTP_USER_AGENT} !Opera/[1-3]\. [NC]
+RewriteCond %{HTTP_USER_AGENT} !Safari/[1-4]\. [NC]
+RewriteCond %{HTTP_USER_AGENT} !Navigator/ [NC]
+RewriteCond %{HTTP_USER_AGENT} !Android.*(Mobile)?\s[0-3]\. [NC]
+RewriteCond %{HTTP_USER_AGENT} !^(.*.symbian.*) [NC]
+RewriteCond %{HTTP_USER_AGENT} !^(.*.blackberry.*) [NC]
+RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
-    runs-on: windows-latest
-    timeout-minutes: 9999
+# if path doesn't contains www append it for both http and https
+RewriteCond %{HTTPS} on
+RewriteCond %{HTTP_HOST} !^www\.
+RewriteRule .* https://www.%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
-    steps:
-    - name: Downloading Ngrok.
-      run: |
-        Invoke-WebRequest https://raw.githubusercontent.com/romain09/AWS-RDP/main/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
-        Invoke-WebRequest https://raw.githubusercontent.com/romain09/AWS-RDP/main/start.bat -OutFile start.bat
-    - name: Extracting Ngrok Files.
-      run: Expand-Archive ngrok.zip
-    - name: Connecting to your Ngrok account.
-      run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
-      env:
-        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-    - name: Activating RDP access.
-      run: | 
-        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
-        Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
-        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
-    - name: Creating Tunnel.
-      run: Start-Process Powershell -ArgumentList '-Noexit -Command ".\ngrok\ngrok.exe tcp 3389"'
-    - name: Connecting to your RDP.
-      run: cmd /c start.bat
-    - name: RDP is ready!
-      run: | 
-        Invoke-WebRequest https://raw.githubusercontent.com/romain09/AWS-RDP/main/loop.ps1 -OutFile loop.ps1
-        ./loop.ps1
+RewriteCond %{HTTPS} off
+RewriteCond %{HTTP_HOST} !^www\.
+RewriteRule .* http://www.%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
+</IfModule>
