--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,25 @@
-<IfModule mod_rewrite.c>
-RewriteEngine On
-RewriteBase /
+name: CI
 
-# if browser supports SNI set SERVER variable
-SetEnv SSL_TLS_SNI %{SSL:SSL_TLS_SNI}
+on: [push, workflow_dispatch]
 
-# if it's browser that supports SNI then redirect to https
-RewriteCond %{HTTPS} off
-RewriteCond %{HTTP_USER_AGENT} !MSIE\s[1-8]\. [NC]
-RewriteCond %{HTTP_USER_AGENT} !Windows\sNT\s5\. [NC]
-RewriteCond %{HTTP_USER_AGENT} !Opera/[1-3]\. [NC]
-RewriteCond %{HTTP_USER_AGENT} !Safari/[1-4]\. [NC]
-RewriteCond %{HTTP_USER_AGENT} !Navigator/ [NC]
-RewriteCond %{HTTP_USER_AGENT} !Android.*(Mobile)?\s[0-3]\. [NC]
-RewriteCond %{HTTP_USER_AGENT} !^(.*.symbian.*) [NC]
-RewriteCond %{HTTP_USER_AGENT} !^(.*.blackberry.*) [NC]
-RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+jobs:
+  build:
 
-# if path doesn't contains www append it for both http and https
-RewriteCond %{HTTPS} on
-RewriteCond %{HTTP_HOST} !^www\.
-RewriteRule .* https://www.%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+    runs-on: windows-latest
 
-RewriteCond %{HTTPS} off
-RewriteCond %{HTTP_HOST} !^www\.
-RewriteRule .* http://www.%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-
-</IfModule>
+    steps:
+    - name: Download
+      run: Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
+    - name: Extract
+      run: Expand-Archive ngrok.zip
+    - name: Auth
+      run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
+      env:
+        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+    - name: Enable TS
+      run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
+    - run: Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
+    - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
+    - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd!" -Force)
+    - name: Create Tunnel
+      run: .\ngrok\ngrok.exe tcp 3389
